force-app/main/default/objects/Customized_Price__c/Customized_Price__c.object-meta.xml
<CustomObject>
    <label>Customized Price</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Customized Price Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customized Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>