force-app/main/default/objects/Customized_Price__c/fields/CC_Remarks_1__c.field-meta.xml
<CustomField>
    <fullName>CC_Remarks_1__c</fullName>
    <label>CC Remarks 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>