force-app/main/default/objects/Customized_Price__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customized Prices</relationshipLabel>
    <relationshipName>Customized_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>