force-app/main/default/objects/Customized_Price__c/fields/Expect_price_per_piece__c.field-meta.xml
<CustomField>
    <fullName>Expect_price_per_piece__c</fullName>
    <label>Expect price per piece</label>
    <length>100</length>
    <type>Text</type>
</CustomField>