force-app/main/default/objects/Customized_Price__c/fields/Lead_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Full_Name__c</fullName>
    <formula>Lead_Name__r.FirstName  +  Lead_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Full Name</label>
    <type>Text</type>
</CustomField>