force-app/main/default/objects/Customized_Price__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>IF( NOT(ISBLANK(Lead_Name__r.Phone)) , Lead_Name__r.Phone, Contact_Name__r.Phone )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>