force-app/main/default/objects/Customized_Price__c/fields/Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Details__c</fullName>
    <label>Product Details</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>