force-app/main/default/objects/Customized_Price__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customized Prices</relationshipLabel>
    <relationshipName>Customized_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>